--- a/src/Pages/DropArea/DropArea.css
+++ b/src/Pages/DropArea/DropArea.css
@@ -21,3 +21,19 @@
     align-items: center;
     color: gray;
 }
+
+.button{
+    padding: 10px;
+    width: 50%;
+    border-radius: 8px;
+    cursor: pointer;
+    border: none;
+    color: white;
+    background-color: green;
+}
+
+.btn-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
